style.css
body{
    background-color: rgb(247, 255, 255);
}


.navbar{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: lightblue;
    text-align: center;
    
}

.navbar ul{
    list-style-type: none;
    padding: 20px;
    margin: 0px;
    display: inline-block;
    overflow: visible;
}

.navbar li{
    float: left;
    font-family: sans-serif;
    margin-left: 70px;
    margin-right: 70px;
}

.navbar li:hover{
    background-color: aliceblue;
    border-radius: 9px;
    text-decoration: underline;
}

.navbar a{
    color: rgb(108, 100, 100);
    text-decoration: none;
    padding: 10px;
    display: block;
    text-align: center;
    font-size: 1.2em;
    font-family: sans-serif;
}

/* Dropdown container */
.dropDownAboutMe {
    float: left;
    position: relative;
    
}

/* Dropdown content (hidden by default) */
.dropDownAboutMeContent {
    display: none;
    position: absolute;
    background-color: lightblue;
    min-width: 220px;
    box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
    border-radius: 9px;
    text-align: left;
    top: 100%;
    left: 0;
    z-index: 1000;
    
}

/* Links inside the dropdown */
.dropDownAboutMeContent a {
    color: rgb(108, 100, 100);
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
    font-size: 1em;
    font-family: sans-serif;
}

/* Change color on hover */
.dropDownAboutMeContent a:hover {
    background-color: aliceblue;
    border-radius: 9px;
}

/* Show dropdown when hovering over parent */
.dropDownAboutMe:hover .dropDownAboutMeContent {
    display: block;
}


main{
    display: block;
    padding-top: 130px;
}

#homeContainer {

    display: flex;
    justify-content: center;
    align-items: center;
    gap: 50px;
    flex-wrap: wrap;
    padding-bottom: 70px;
    margin-top: 100px;
    margin-bottom: 150px;  /* Space before About Me */
    border: solid rgb(230, 230, 205);
    border-radius: 150px;
    background-image: url('back_img_intro.jpg');
    width: 60%;
    margin-left: 320px;
    padding-bottom: 50px;
    padding-left: 20px;
}



#myIcon{

    image-rendering: crisp-edges;
    margin-top: 50px;
    background-color: rgb(162, 193, 220);
    border-radius: 30px;

}


#introMyself{
    
    font-family: sans-serif;
    font-size: 3em;
    font-weight: bold;
    margin-top: 70px;
    margin-bottom: 30px;
}

#introMyselfJob{
    font-size: 1.3 em;
    font-family: sans-serif;
    width: auto ;
    margin-bottom: 10px;
}

#contactMeBtn{
    cursor: pointer;
    background-color: white;
    border: 1px solid;
    text-align: right;
    padding: 15px;
    margin-top: 30px;
}

#contactMeBtn:hover{
    background-color: rgb(201, 199, 199);
}

#contactMeBtn a{
    text-decoration: none;
    color: black;
    font-size: 1.3em;
}

#contentContainer{
    text-align: left;
}

.scrollRemind{
    display: flex;
    justify-content: center;
    align-items: center;
}

#scrollDownImage{

    margin-top: 110px;
    width: 70px;
    height: 70px;
    object-fit: cover;
    
}

.aboutMeContainerFormat{
    display: block;  
    width: 85%;
    margin: 0 auto;  
    margin-bottom: 50px;
}

.aboutMeHeader{
    font-family: sans-serif;
    font-size: 1.8em;
    font-weight: bold;
    margin-bottom: 0px;
    text-align: center;
    margin-bottom: 30px;
    margin-left: 30px;
}

.aboutMeSmallHeader{
    font-weight: bold;
    font-size: 1.2em;
    margin-bottom: 10px;
}

.aboutMeContentContainer{
    font-family: sans-serif;
    font-size: 1.2em;
    height: 60vh;
    line-height: 50px;
    padding: 50px;
    padding-top: 20px;
    padding-bottom: 0px;
    border: dotted rgb(162, 193, 220);
    border-radius: 50px;
    margin-bottom: 100px;
    position: relative;
    z-index: 1;
}

.aboutMeContentContainer::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-image: url('back_img_about_me.jpg.webp.avif');
    background-size: cover;
    background-position: center;
    opacity: 0.15;  
    border-radius: 50px;
    z-index: -1;  /* Puts it behind the content */
}

#aboutMeEducationContentContainer{
    height: 50vh;
    padding-bottom: 0px;
}

#aboutMeWEContentContainer{
    height: 80vh;
}

